--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emoji-mart": "^3.0.1",
     "firebase": "^8.6.3",
     "md5": "^2.3.0",
+    "mime-types": "^2.1.31",
     "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
@@ -27,6 +28,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "uuid": "^8.3.2",
+    "uuidv4": "^6.2.8",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
